<resources>
    <string name="app_name">BoxingTimer</string>
    <string name="label_round_duration">Duración del Round</string>
    <string name="initial_minutes_of_round">0</string>
    <string name="initial_seconds_of_round">10</string>
    <string name="label_button_add_time">+</string>
    <string name="label_button_rest_time">-</string>
    <string name="time_dots_separator">:</string>
    <string name="label_button_start">Iniciar</string>
    <string name="label_number_of_rounds">Cantidad de Rounds</string>
    <string name="initial_round_numbers">12</string>
    <string name="label_rest_duration">Duración del descanso</string>
    <string name="initial_rest_time_minutes">0</string>
    <string name="initial_rest_time_seconds">10</string>
    <string name="label_round">Round</string>
    <string name="label_round_counter">1/0</string>
    <string name="label_rest">Descanso</string>
</resources>