<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/label_round_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/label_round_duration"
        android:textSize="35sp" />

    <LinearLayout
        android:background="@drawable/mybox"
        android:padding="20dp"
        android:layout_marginHorizontal="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/label_round_minutes_shown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/initial_minutes_of_round"
            android:textAlignment="viewEnd"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/label_dots_separators"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_dots_separator"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/label_round_seconds_shown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="22dp"
            android:text="@string/initial_seconds_of_round"
            android:layout_weight="1"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button_add_time_to_round"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/label_button_add_time"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button_subtract_time_to_round"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_button_rest_time"
            android:textSize="24sp" />


    </LinearLayout>

    <TextView
        android:id="@+id/label_round_numbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/label_number_of_rounds"
        android:textSize="35sp" />

    <LinearLayout
        android:background="@drawable/mybox"
        android:padding="20dp"
        android:layout_marginHorizontal="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/round_numbers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/initial_round_numbers"
            android:layout_weight="3"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button_add_rounds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="0.5"
            android:text="@string/label_button_add_time"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button_subtract_rounds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/label_button_rest_time"
            android:textSize="24sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/label_rest_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/label_rest_duration"
        android:textSize="35sp" />

    <LinearLayout
        android:background="@drawable/mybox"
        android:padding="20dp"
        android:layout_marginHorizontal="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/label_rest_minutes_shown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/initial_rest_time_minutes"
            android:textAlignment="viewEnd"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/label_dots_separators_rest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_dots_separator"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/label_rest_seconds_shown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="22dp"
            android:layout_weight="1"
            android:text="@string/initial_rest_time_seconds"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button_add_time_to_rest"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/label_button_add_time"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button_subtract_time_to_rest"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_button_rest_time"
            android:textSize="24sp" />


    </LinearLayout>


    <Button
        android:id="@+id/button_start_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:width="120dp"
        android:height="55dp"
        android:text="@string/label_button_start" />

</LinearLayout>